--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -22,7 +22,10 @@
             &--text{
                 @include widhei(100%, auto);
                 @include marpad(0,5px);
-                @include texts(4vw, 500, rgb(0, 0, 0))
+                @include texts(4vw, 500, rgb(0, 0, 0));
+                & span{
+                    color: map-get($map: $colors, $key: ab-dos)
+                }
             }
         }
     }
