--- a/views/nosotros/nosotros.html
+++ b/views/nosotros/nosotros.html
@@ -131,7 +131,7 @@
             <article class="main-nosotros__section--article art-nos-1 col-12 col-sm-12 col-md-12 col-lg-12">
                 <img class="main-nosotros__section--article--image col-12" src="../../imagenes/logo-foto.webp" alt="Nosotros foto 1">
                 <p class="main-nosotros__section--article--text col-12">
-                    En el año 2002 Juan Leskovar encaró el desafío de comenzar una distribuidora de tornillos autoperforantes. Inició su actividad Gamma Distribuciones como Distribuidor Oficial TEL. Hoy con más de 20 años de experiencia en los rubros de construcción y bulonería, seguimos adelante con el mismo empeño y convicción que en sus inicios.
+                    En el año 2002 Juan Leskovar encaró el desafío de comenzar una distribuidora de tornillos autoperforantes. Inició su empresa <span>Gamma Distribuciones</span> como Distribuidor Oficial TEL. Hoy con más de 20 años de experiencia en los rubros de construcción y bulonería, seguimos adelante con el mismo empeño y convicción que en nuestros inicios.
                 </p>
             </article>
             <!-- ARTICLE-(nosotros)-1 = END -->
@@ -139,7 +139,7 @@
             <article class="main-nosotros__section--article art-nos-2 col-12 col-sm-12 col-md-12 col-lg-12">
                 <img class="main-nosotros__section--article--image col-12" src="../../imagenes/deposito-gamma.webp" alt="Nosotros foto 2">
                 <p class="main-nosotros__section--article--text col-12">
-                 Contamos con un destacado equipo de personas dedicadas diariamente a plasmar los valores de la empresa: atención personalizada, dedicación y esmero, trato cordial, respeto y vocación por el servicio. Siempre con el la satisfacción del cliente en mente y el crecimiento y mejora constante como norte.
+                 Contamos con un destacado equipo de personas dedicadas diariamente a plasmar los valores de la empresa: atención personalizada, dedicación y esmero, trato cordial, respeto y vocación por el servicio. Siempre con la satisfacción del cliente en mente y el crecimiento y mejora constante como norte.
                 </p>
             </article>
             <!-- ARTICLE-(nosotros)-2 = END -->
@@ -147,7 +147,7 @@
             <article class="main-nosotros__section--article art-nos-3 col-12 col-sm-12 col-md-12 col-lg-12">
                 <img class="main-nosotros__section--article--image col-12" src="../../imagenes/familia-leskovar.webp" alt="Nosotros foto 3">
                 <p class="main-nosotros__section--article--text col-12">
-                    El fundador de Gamma Distribuciones; Juan Leskovar, es esposo, padre de cuatro hijos, estudiante de marketing y emprendedor que a sus 50 años mantiene intacta su pasión por llevar su empresa al avance y la mejora constante. Él encontró la forma de fusionar sus conocimientos en el área junto con su deseo de honrar valores que le son muy afectos: la responsabilidad, el compromiso, la palabra cumplida, el trato cercano y accesible, y la pasión por brindar soluciones.
+                    El fundador de <span>Gamma Distribuciones</span> Juan Leskovar, es esposo, padre de cuatro hijos, estudiante de marketing y emprendedor que a sus 50 años mantiene intacta su pasión por llevar su empresa al avance y la mejora constante. Él encontró la forma de fusionar sus conocimientos en el área junto con su deseo de honrar valores que le son muy afectos: la responsabilidad, el compromiso, la palabra cumplida, el trato cercano y accesible, y la pasión por brindar soluciones.
                 </p>
             </article>
             <!-- ARTICLE-(nosotros)-3 = END -->
