--- a/css/main.css
+++ b/css/main.css
@@ -1561,6 +1561,9 @@ html {
   font-weight: 500;
   color: rgb(0, 0, 0);
 }
+.main-nosotros__section--article--text span {
+  color: rgb(30, 90, 90);
+}
 .main-nosotros__founders {
   width: 100%;
   height: auto;
