--- a/views/nosotros/nosotros.html
+++ b/views/nosotros/nosotros.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="tornillos, bulones, autoperforantes, construcción"/>
     <meta name="copyright" content="Gamma Distribuciones"/>
     <meta name="robots" content="index, follow"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Nosotros - Gamma Distribuciones</title>
 </head>
 <body>
@@ -128,7 +129,7 @@
         <!-- SECTION-(nosotros) = START -->
         <section class="main-nosotros__section col-12">
             <!-- ARTICLE-(nosotros)-1 = START -->
-            <article class="main-nosotros__section--article art-nos-1 col-12 col-sm-12 col-md-12 col-lg-12">
+            <article class="main-nosotros__section--article art-nos-1 col-12 col-sm-12 col-md-12 col-lg-12 wow animate__animated animate__fadeInUp li-1">
                 <img class="main-nosotros__section--article--image col-12" src="../../imagenes/logo-foto.webp" alt="Nosotros foto 1">
                 <p class="main-nosotros__section--article--text col-12">
                     En el año 2002 Juan Leskovar encaró el desafío de comenzar una distribuidora de tornillos autoperforantes. Inició su empresa <span>Gamma Distribuciones</span> como Distribuidor Oficial TEL. Hoy con más de 20 años de experiencia en los rubros de construcción y bulonería, seguimos adelante con el mismo empeño y convicción que en nuestros inicios.
@@ -136,7 +137,7 @@
             </article>
             <!-- ARTICLE-(nosotros)-1 = END -->
             <!-- ARTICLE-(nosotros)-2 = START -->
-            <article class="main-nosotros__section--article art-nos-2 col-12 col-sm-12 col-md-12 col-lg-12">
+            <article class="main-nosotros__section--article art-nos-2 col-12 col-sm-12 col-md-12 col-lg-12 wow animate__animated animate__fadeInUp li-2">
                 <img class="main-nosotros__section--article--image col-12" src="../../imagenes/deposito-gamma.webp" alt="Nosotros foto 2">
                 <p class="main-nosotros__section--article--text col-12">
                  Contamos con un destacado equipo de personas dedicadas diariamente a plasmar los valores de la empresa: atención personalizada, dedicación y esmero, trato cordial, respeto y vocación por el servicio. Siempre con la satisfacción del cliente en mente y el crecimiento y mejora constante como norte.
@@ -144,7 +145,7 @@
             </article>
             <!-- ARTICLE-(nosotros)-2 = END -->
             <!-- ARTICLE-(nosotros)-3 = START -->
-            <article class="main-nosotros__section--article art-nos-3 col-12 col-sm-12 col-md-12 col-lg-12">
+            <article class="main-nosotros__section--article art-nos-3 col-12 col-sm-12 col-md-12 col-lg-12 wow animate__animated animate__fadeInUp li-3">
                 <img class="main-nosotros__section--article--image col-12" src="../../imagenes/familia-leskovar.webp" alt="Nosotros foto 3">
                 <p class="main-nosotros__section--article--text col-12">
                     El fundador de <span>Gamma Distribuciones</span> Juan Leskovar, es esposo, padre de cuatro hijos, estudiante de marketing y emprendedor que a sus 50 años mantiene intacta su pasión por llevar su empresa al avance y la mejora constante. Él encontró la forma de fusionar sus conocimientos en el área junto con su deseo de honrar valores que le son muy afectos: la responsabilidad, el compromiso, la palabra cumplida, el trato cercano y accesible, y la pasión por brindar soluciones.
@@ -156,7 +157,7 @@
         <!-- FUNDADORES-(nosotros) = START -->
         <div class="main-nosotros__founders col-12">
             <!-- FIRST-PERSON-(nosotros) = START -->
-            <div class="main-nosotros__founders--div col-12 col-md-3">
+            <div class="main-nosotros__founders--div col-12 col-md-3 wow animate__animated animate__fadeInUp li-4">
                 <img class="main-nosotros__founders--div--img" src="../../imagenes/juan-leskovar.webp" alt="Foto Fundador">
                 <h2 class="main-nosotros__founders--div--name">
                     Juan Leskovar
@@ -167,7 +168,7 @@
             </div>
             <!-- FIRST-PERSON-(nosotros) = END -->
             <!-- SECOND-PERSON-(nosotros) = START -->
-            <div class="main-nosotros__founders--div col-12 col-md-3">
+            <div class="main-nosotros__founders--div col-12 col-md-3 wow animate__animated animate__fadeInUp li-5">
                 <img class="main-nosotros__founders--div--img" src="../../imagenes/marco-leskovar.webp" alt="Foto Ventas">
                 <h2 class="main-nosotros__founders--div--name">
                     Marco Leskovar
@@ -233,7 +234,7 @@
         <!-- FOOTER-form = END -->
         <!-- FOOTER-map = START -->
         <div class="footer__map col-12 col-md-10 col-lg-10">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.01671327685!2d-58.383759084858994!3d-34.60373888045956!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1677312563394!5m2!1ses!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.01582133451!2d-58.48644812482326!3d-34.67955016150602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc95323a06215%3A0x65dff9ce16fbdcdc!2sGamma%20Distribuciones%20Tornillos!5e0!3m2!1ses-419!2sar!4v1682456787426!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <!-- FOOTER-map = END -->
         <!-- FOOTER-redes = START -->
@@ -281,6 +282,10 @@
 <!-- FOOTER = END -->
 <!-- SCRIPTS = START -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="../../js/wow.js"></script>
+<script>
+new WOW().init();
+</script>
 <!-- SCRIPTS = END -->
 </body>
 </html>
