--- a/css/main.css
+++ b/css/main.css
@@ -810,6 +810,15 @@ html {
   flex-wrap: wrap;
   z-index: 500;
 }
+.section-1-index__article-1 .li-1 {
+  animation-delay: 100ms;
+}
+.section-1-index__article-1 .li-2 {
+  animation-delay: 300ms;
+}
+.section-1-index__article-1 .li-3 {
+  animation-delay: 600ms;
+}
 .section-1-index__article-1--figure {
   width: 70%;
   height: auto;
@@ -858,6 +867,11 @@ html {
   text-decoration: none;
   margin-bottom: 5px;
   color: rgb(100, 100, 100);
+  background-image: linear-gradient(rgb(55, 106, 109), rgb(55, 106, 109));
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size 0.3s;
 }
 .section-1-index div a:hover {
   color: rgb(30, 90, 90);
@@ -939,6 +953,7 @@ html {
   }
   .section-1-index div a:hover {
     color: rgb(30, 90, 90);
+    background-size: 100% 2px;
   }
 }
 /* ---------BREAKPOINT-DESKTOP-IND = END--------- */
@@ -997,6 +1012,9 @@ html {
   list-style: none;
   border-radius: 15px;
   cursor: pointer;
+}
+.main-productos__section--ul .li-2, .main-novedades__section--ul .li-2, .main-carrito__section--ul .li-2 {
+  animation-delay: 200ms;
 }
 .main-productos__section--ul--li {
   width: auto;
@@ -1535,6 +1553,9 @@ html {
   display: flex;
   flex-direction: column;
 }
+.main-nosotros__section .li-2 {
+  animation-delay: 0.7s;
+}
 .main-nosotros__section--article {
   width: 100%;
   height: auto;
@@ -1573,6 +1594,12 @@ html {
   padding: 10px;
   display: flex;
   flex-direction: column;
+}
+.main-nosotros__founders .li-4 {
+  animation-delay: 0.3s;
+}
+.main-nosotros__founders .li-5 {
+  animation-delay: 0.5s;
 }
 .main-nosotros__founders--div {
   width: 100%;
