--- a/views/novedades/novedades.html
+++ b/views/novedades/novedades.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="tornillos, bulones, autoperforantes, construcción"/>
     <meta name="copyright" content="Gamma Distribuciones"/>
     <meta name="robots" content="index, follow"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Novedades - Gamma Distribuciones</title>
 </head>
 <body>
@@ -136,7 +137,7 @@
         <!-- SECTION-(novedades) = START -->
         <section class="main-novedades__section col-11 col-lg-10">
             <ul class="main-novedades__section--ul">
-                <li class="main-novedades__section--ul--li first-novedades-li">
+                <li class="main-novedades__section--ul--li first-novedades-li wow animate__animated animate__fadeInUp li-1">
                     <a class="main-novedades__section--ul--li--a" href="#">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/productos-grilla.webp" alt="Novedad foto 1">
                         <div class="main-novedades__section--ul--li--a--div">
@@ -150,7 +151,7 @@
                         </svg>
                     </div>
                 </li>
-                <li class="main-novedades__section--ul--li">
+                <li class="main-novedades__section--ul--li wow animate__animated animate__fadeInUp li-2">
                     <a class="main-novedades__section--ul--li--a" href="#">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/toralas-10x2.webp" alt="Novedad foto 2">
                         <div class="main-novedades__section--ul--li--a--div">
@@ -164,7 +165,7 @@
                         </svg>
                     </div>
                 </li>
-                <li class="main-novedades__section--ul--li last-novedades-li">
+                <li class="main-novedades__section--ul--li last-novedades-li wow animate__animated animate__fadeInUp li-3">
                     <a class="main-novedades__section--ul--li--a" href="#">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/oferta-exclusiva.webp" alt="Novedad foto 3">
                         <div class="main-novedades__section--ul--li--a--div">
@@ -235,7 +236,7 @@
         <!-- FOOTER-form = END -->
         <!-- FOOTER-map = START -->
         <div class="footer__map col-12 col-md-10 col-lg-10">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.01671327685!2d-58.383759084858994!3d-34.60373888045956!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1677312563394!5m2!1ses!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.01582133451!2d-58.48644812482326!3d-34.67955016150602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc95323a06215%3A0x65dff9ce16fbdcdc!2sGamma%20Distribuciones%20Tornillos!5e0!3m2!1ses-419!2sar!4v1682456787426!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <!-- FOOTER-map = END -->
         <!-- FOOTER-redes = START -->
@@ -283,6 +284,10 @@
 <!-- FOOTER = END -->
 <!-- SCRIPTS = START -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="../../js/wow.js"></script>
+<script>
+new WOW().init();
+</script>
 <!-- SCRIPTS = END -->
 </body>
 </html>
