conexion con pag 404

--- a/views/novedades/novedades.html
+++ b/views/novedades/novedades.html
@@ -30,7 +30,7 @@
             <!-- HEADER-logo = END -->
             <!-- HEADER-sup = START -->
             <div class="header__first--nav-sup col-6 m-auto">
-                <a class="nav-link hover" aria-current="page" href="#">
+                <a class="nav-link hover" aria-current="page" href="../404/404.html">
                     <svg class="header__first--nav-sup--lupa-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                     </svg>
@@ -47,7 +47,7 @@
             <!-- NAV-items = START -->
                 <!-- NAV-login = START -->
                 <div class="nav__log nav-item col-sm-12 col-lg-3" id="AccederItem">
-                    <a class="nav__log--login" href="#">
+                    <a class="nav__log--login" href="../404/404.html">
                         <button class="nav__log--login--button">
                             <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
                             <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario 2">
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="nav__ul--li nav-item container-fluid p-0" id="BusquedaNav">
-                        <a class="nav-link hover" aria-current="page" href="#">
+                        <a class="nav-link hover" aria-current="page" href="../404/404.html">
                             <svg class="nav__ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                             </svg>
@@ -138,7 +138,7 @@
         <section class="main-novedades__section col-11 col-lg-10">
             <ul class="main-novedades__section--ul">
                 <li class="main-novedades__section--ul--li first-novedades-li wow animate__animated animate__fadeInUp li-1">
-                    <a class="main-novedades__section--ul--li--a" href="#">
+                    <a class="main-novedades__section--ul--li--a" href="../404/404.html">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/productos-grilla.webp" alt="Novedad foto 1">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Tu pedido del carrito ya esta listo!</h2>
@@ -152,7 +152,7 @@
                     </div>
                 </li>
                 <li class="main-novedades__section--ul--li wow animate__animated animate__fadeInUp li-2">
-                    <a class="main-novedades__section--ul--li--a" href="#">
+                    <a class="main-novedades__section--ul--li--a" href="../404/404.html">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/toralas-10x2.webp" alt="Novedad foto 2">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Nuevo producto disponible!</h2>
@@ -166,7 +166,7 @@
                     </div>
                 </li>
                 <li class="main-novedades__section--ul--li last-novedades-li wow animate__animated animate__fadeInUp li-3">
-                    <a class="main-novedades__section--ul--li--a" href="#">
+                    <a class="main-novedades__section--ul--li--a" href="../404/404.html">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/oferta-exclusiva.webp" alt="Novedad foto 3">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Ofertas exclusivas de verano!</h2>
