--- a/views/productos/productos.html
+++ b/views/productos/productos.html
@@ -30,7 +30,7 @@
             <!-- HEADER-logo = END -->
             <!-- HEADER-sup = START -->
             <div class="header__first--nav-sup col-6 m-auto">
-                <a class="nav-link hover" aria-current="page" href="#">
+                <a class="nav-link hover" aria-current="page" href="../404/404.html">
                     <svg class="header__first--nav-sup--lupa-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                     </svg>
@@ -47,7 +47,7 @@
             <!-- NAV-items = START -->
                 <!-- NAV-login = START -->
                 <div class="nav__log nav-item col-sm-12 col-lg-3" id="AccederItem">
-                    <a class="nav__log--login" href="#">
+                    <a class="nav__log--login" href="../404/404.html">
                         <button class="nav__log--login--button">
                             <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
                             <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario 2">
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="nav__ul--li nav-item container-fluid p-0" id="BusquedaNav">
-                        <a class="nav-link hover" aria-current="page" href="#">
+                        <a class="nav-link hover" aria-current="page" href="../404/404.html">
                             <svg class="nav__ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                             </svg>
@@ -146,7 +146,7 @@
             <ul class="main-productos__section--ul">
                 <!-- PRODUCTO 1 = START -->
                 <li class="main-productos__section--ul--li first-product-li wow animate__animated animate__fadeInUp li-1">
-                    <a class="main-productos__section--ul--li--a" href="#">
+                    <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t2-aguja-6x1.webp" alt="Producto 1">
                         <div class="main-productos__section--ul--li--a--div">
                             <h2 class="main-productos__section--ul--li--a--div--product-name">T2 Aguja 6x1 - Granel</h2>
@@ -157,7 +157,7 @@
                 <!-- PRODUCTO 1 = END -->
                 <!-- PRODUCTO 2 = START -->
                 <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-2">
-                    <a class="main-productos__section--ul--li--a" href="#">
+                    <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t1-mecha-8x12.webp" alt="Producto 2">
                         <div class="main-productos__section--ul--li--a--div">
                             <h2 class="main-productos__section--ul--li--a--div--product-name">T1 Mecha 8x1/2 (Zincado) - Granel</h2>
@@ -168,7 +168,7 @@
                 <!-- PRODUCTO 2 = END -->
                 <!-- PRODUCTO 3 = START -->
                 <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-3">
-                    <a class="main-productos__section--ul--li--a" href="#">
+                    <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/hex-t2-14x2.webp" alt="Producto 3">
                         <div class="main-productos__section--ul--li--a--div">
                             <h2 class="main-productos__section--ul--li--a--div--product-name">Hex T2 14x2 - Granel</h2>
@@ -179,7 +179,7 @@
                 <!-- PRODUCTO 3 = END -->
                 <!-- PRODUCTO 4 = START -->
                 <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-4">
-                    <a class="main-productos__section--ul--li--a" href="#">
+                    <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/fix-5x45.webp" alt="Producto 4">
                         <div class="main-productos__section--ul--li--a--div">
                             <h2 class="main-productos__section--ul--li--a--div--product-name">Fix 5x45 (Dorado) - Granel</h2>
@@ -190,7 +190,7 @@
                 <!-- PRODUCTO 4 = END -->
                 <!-- PRODUCTO 5 = START -->
                 <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-5">
-                    <a class="main-productos__section--ul--li--a" href="#">
+                    <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tarugo-8-ct.webp" alt="Producto 5">
                         <div class="main-productos__section--ul--li--a--div">
                             <h2 class="main-productos__section--ul--li--a--div--product-name">Tarugo 8 c/t - Bolsa</h2>
@@ -201,7 +201,7 @@
                 <!-- PRODUCTO 5 = END -->
                 <!-- PRODUCTO 6 = START -->
                 <li class="main-productos__section--ul--li last-product-li wow animate__animated animate__fadeInUp li-6">
-                    <a class="main-productos__section--ul--li--a" href="#">
+                    <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t1-aguja-8x916.webp" alt="Producto 6">
                         <div class="main-productos__section--ul--li--a--div">
                             <h2 class="main-productos__section--ul--li--a--div--product-name">T1 Aguja 8x9/16 - Granel</h2>
