arreglos en animacioens, correcion img nosotros

--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -47,7 +47,13 @@
             border-radius: 15px;
             cursor: pointer;
             .li-2{
+                animation-delay: 100ms;
+            }
+            .li-3{
                 animation-delay: 200ms;
+            }
+            .li-4{
+                animation-delay: 300ms;
             }
             &--li{
                 @include wid(auto);
@@ -163,6 +169,15 @@
 .main-productos{
     &__section{
         &--ul{
+            .li-2{
+                animation-delay: 100ms;
+            }
+            .li-3{
+                animation-delay: 200ms;
+            }
+            .li-4{
+                animation-delay: 0ms;
+            }
             &--li{
                 &:active{
                     & h2{
@@ -207,6 +222,15 @@
     }
     &__section{
         &--ul{
+            .li-2{
+                animation-delay: 100ms;
+            }
+            .li-3{
+                animation-delay: 0ms;
+            }
+            .li-4{
+                animation-delay: 0ms;
+            }
             &--li{
                 &:active{
                     & h2{
