--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@ html {
 .header__first--logo--mini {
   width: 9vw;
   height: auto;
+  transition: 0.2s ease-in-out;
 }
 .header__first--logo--mini:hover {
   transform: scale(1.02);
@@ -67,6 +68,7 @@ html {
   height: auto;
   margin: 0 0 0 5px;
   display: none;
+  transition: 0.2s ease-in-out;
 }
 .header__first--logo--full:hover {
   transform: scale(1.03);
@@ -181,6 +183,7 @@ html {
   border: 2px solid rgb(170, 170, 170);
   border-radius: 100px;
   cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
 .nav__log--login--button:hover {
   background-color: rgb(30, 90, 90);
@@ -609,6 +612,7 @@ html {
     width: 100%;
     padding: 3px;
     text-align: center;
+    transition: background-color 0.2s ease-in-out;
   }
   .header__desktop-subpages__ul--li:hover {
     padding: 0;
@@ -663,6 +667,7 @@ html {
   }
   .nav__ul--li--svg path {
     color: rgb(235, 235, 235);
+    transition: color 0.2s ease-in-out;
   }
   .nav__ul--li:hover path {
     color: rgb(30, 90, 90);
@@ -810,14 +815,8 @@ html {
   flex-wrap: wrap;
   z-index: 500;
 }
-.section-1-index__article-1 .li-1 {
+.section-1-index__article-1 .li-1, .section-1-index__article-1 .li-2, .section-1-index__article-1 .li-3 {
   animation-delay: 100ms;
-}
-.section-1-index__article-1 .li-2 {
-  animation-delay: 300ms;
-}
-.section-1-index__article-1 .li-3 {
-  animation-delay: 600ms;
 }
 .section-1-index__article-1--figure {
   width: 70%;
@@ -832,6 +831,7 @@ html {
   background-color: rgb(235, 235, 235);
   border-radius: 5px;
   cursor: pointer;
+  transition: 0.2s ease-in-out;
 }
 .section-1-index__article-1--figure:active {
   box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.25);
@@ -876,9 +876,6 @@ html {
 .section-1-index div a:hover {
   color: rgb(30, 90, 90);
 }
-.section-1-index div a:active {
-  text-decoration: underline;
-}
 
 /* ---------BREAKPOINT-MOBILE-IND = START--------- */
 @media (min-width: 576px) {
@@ -904,8 +901,17 @@ html {
   .section-1-index__text {
     font-size: 8vw;
   }
+  .section-1-index__article-1 .li-1, .section-1-index__article-1 .li-2, .section-1-index__article-1 .li-3 {
+    animation-delay: 50ms;
+  }
+  .section-1-index__article-1--figure {
+    width: 65vw;
+  }
+  .section-1-index__article-1--figure--img {
+    width: 60%;
+  }
   .section-1-index__article-1--figure--figcap {
-    font-size: 4.5vw;
+    font-size: 4vw;
   }
 }
 /* ---------BREAKPOINT-TABLET-IND = END--------- */
@@ -928,6 +934,12 @@ html {
   }
   .section-1-index__article-1 {
     width: 100%;
+  }
+  .section-1-index__article-1 .li-2 {
+    animation-delay: 250ms;
+  }
+  .section-1-index__article-1 .li-3 {
+    animation-delay: 350ms;
   }
   .section-1-index__article-1--figure {
     width: 25%;
@@ -1014,7 +1026,13 @@ html {
   cursor: pointer;
 }
 .main-productos__section--ul .li-2, .main-novedades__section--ul .li-2, .main-carrito__section--ul .li-2 {
+  animation-delay: 100ms;
+}
+.main-productos__section--ul .li-3, .main-novedades__section--ul .li-3, .main-carrito__section--ul .li-3 {
   animation-delay: 200ms;
+}
+.main-productos__section--ul .li-4, .main-novedades__section--ul .li-4, .main-carrito__section--ul .li-4 {
+  animation-delay: 300ms;
 }
 .main-productos__section--ul--li {
   width: auto;
@@ -1118,6 +1136,15 @@ html {
 /* ---------BREAKPOINT-MOBILE-PRO = END--------- */
 /* ---------BREAKPOINT-TABLET-PRO = START--------- */
 @media (min-width: 768px) {
+  .main-productos__section--ul .li-2, .main-novedades__section--ul .li-2, .main-carrito__section--ul .li-2 {
+    animation-delay: 100ms;
+  }
+  .main-productos__section--ul .li-3, .main-novedades__section--ul .li-3, .main-carrito__section--ul .li-3 {
+    animation-delay: 200ms;
+  }
+  .main-productos__section--ul .li-4, .main-novedades__section--ul .li-4, .main-carrito__section--ul .li-4 {
+    animation-delay: 0ms;
+  }
   .main-productos__section--ul--li:active h2 {
     font-size: 6.1vw;
   }
@@ -1148,6 +1175,15 @@ html {
   }
   .main-productos__list-functions--div--img, .main-novedades__list-functions--div--img, .main-carrito__list-functions--div--img {
     width: 1.4vw;
+  }
+  .main-productos__section--ul .li-2, .main-novedades__section--ul .li-2, .main-carrito__section--ul .li-2 {
+    animation-delay: 100ms;
+  }
+  .main-productos__section--ul .li-3, .main-novedades__section--ul .li-3, .main-carrito__section--ul .li-3 {
+    animation-delay: 0ms;
+  }
+  .main-productos__section--ul .li-4, .main-novedades__section--ul .li-4, .main-carrito__section--ul .li-4 {
+    animation-delay: 0ms;
   }
   .main-productos__section--ul--li:active h2 {
     padding: 5px 5px 0 5px;
@@ -1732,4 +1768,3 @@ html {
 /* ---------------NOSOTROS=END----------------- */
 
 /*# sourceMappingURL=main.css.map */
-  
