--- a/scss/_all-pages.scss
+++ b/scss/_all-pages.scss
@@ -18,6 +18,7 @@
             @include marpad(0, 10px 15px);
             &--mini{
                 @include widhei(9vw, auto);
+                transition: 0.2s ease-in-out;
                 &:hover{
                     transform:scale(1.02);
                 }
@@ -26,6 +27,7 @@
                 @include widhei(300px, auto);
                 @include mar(0 0 0 5px);
                 @include display(no);
+                transition: 0.2s ease-in-out;
                 &:hover{
                     transform:scale(1.03);
                 }
@@ -118,6 +120,7 @@
                 border: 2px solid rgb(170, 170, 170);
                 border-radius: 100px;
                 cursor: pointer;
+                transition: background-color 0.2s ease-in-out;  
                 &:hover{
                     background-color: map-get($map: $colors, $key: ab-dos);
                     border-color: map-get($map: $colors, $key: b-ocho);
@@ -530,6 +533,7 @@
                     @include wid(100%);
                     @include pad(3px);
                     text-align: center;
+                    transition: background-color 0.2s ease-in-out;
                     &:hover{
                         @include pad(0);
                         background-color: map-get($map: $colors, $key: b-seis);
@@ -581,6 +585,7 @@
                     @include wid(30px);
                     & path{
                         color: map-get($map: $colors, $key: b-dos);
+                        transition: color 0.2s ease-in-out;
                     }
                 }
                 &:hover path{
