--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -50,14 +50,8 @@
         @include flex(row);
         flex-wrap: wrap;
         z-index: 500;
-        .li-1{
-                animation-delay: 100ms;
-            }
-        .li-2{
-            animation-delay: 300ms;
-        }
-        .li-3{
-            animation-delay: 600ms;
+        .li-1, .li-2, .li-3{
+            animation-delay: 100ms;
         }
         &--figure{
             @include widhei(70%, auto);
@@ -69,6 +63,7 @@
             background-color: map-get($map: $colors, $key: b-dos);
             border-radius: 5px;
             cursor: pointer;
+            transition: 0.2s ease-in-out;
             &:active{
                 box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.25);
             }
@@ -104,9 +99,6 @@
             &:hover{
                 color: map-get($map: $colors, $key: ab-dos);
             }
-            &:active{
-                text-decoration: underline;
-            }
         }
     }
 }
@@ -141,9 +133,18 @@
         &__text{
             @include fs(8vw);
         }
-        &__article-1--figure{
-            &--figcap{
-                @include fs(4.5vw);
+        &__article-1{
+            .li-1, .li-2, .li-3{
+                animation-delay: 50ms;
+            }
+            &--figure{
+                @include wid(65vw);
+                &--img{
+                    @include wid(60%);
+                }
+                &--figcap{
+                    @include fs(4vw);
+                }
             }
         }
     }
@@ -167,8 +168,13 @@
         }
         &__article-1{
             @include wid(100%);
+            .li-2{
+                animation-delay: 250ms;
+            }
+            .li-3{
+                animation-delay: 350ms;
+            }
             &--figure{
-
                 @include wid(25%);
                 justify-content: center;
                 &:hover{
