--- a/views/productos/productos.html
+++ b/views/productos/productos.html
@@ -145,7 +145,7 @@
             <!-- SECTION-(productos)-ul = START -->
             <ul class="main-productos__section--ul">
                 <!-- PRODUCTO 1 = START -->
-                <li class="main-productos__section--ul--li first-product-li wow animate__animated animate__fadeInUp li-1">
+                <li class="main-productos__section--ul--li first-product-li wow animate__animated animate__fadeInUp li-1" id="primerProducto">
                     <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t2-aguja-6x1.webp" alt="Producto 1">
                         <div class="main-productos__section--ul--li--a--div">
@@ -156,7 +156,7 @@
                 </li>
                 <!-- PRODUCTO 1 = END -->
                 <!-- PRODUCTO 2 = START -->
-                <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-2">
+                <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-2" id="segundoProducto">
                     <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t1-mecha-8x12.webp" alt="Producto 2">
                         <div class="main-productos__section--ul--li--a--div">
@@ -167,7 +167,7 @@
                 </li>
                 <!-- PRODUCTO 2 = END -->
                 <!-- PRODUCTO 3 = START -->
-                <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-3">
+                <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-3" id="tercerProducto">
                     <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/hex-t2-14x2.webp" alt="Producto 3">
                         <div class="main-productos__section--ul--li--a--div">
@@ -178,7 +178,7 @@
                 </li>
                 <!-- PRODUCTO 3 = END -->
                 <!-- PRODUCTO 4 = START -->
-                <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-4">
+                <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-4" id="cuartoProducto">
                     <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/fix-5x45.webp" alt="Producto 4">
                         <div class="main-productos__section--ul--li--a--div">
@@ -189,7 +189,7 @@
                 </li>
                 <!-- PRODUCTO 4 = END -->
                 <!-- PRODUCTO 5 = START -->
-                <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-5">
+                <li class="main-productos__section--ul--li wow animate__animated animate__fadeInUp li-5" id="quintoProducto">
                     <a class="main-productos__section--ul--li--a" href="../404/404.html">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tarugo-8-ct.webp" alt="Producto 5">
                         <div class="main-productos__section--ul--li--a--div">
@@ -200,8 +200,8 @@
                 </li>
                 <!-- PRODUCTO 5 = END -->
                 <!-- PRODUCTO 6 = START -->
-                <li class="main-productos__section--ul--li last-product-li wow animate__animated animate__fadeInUp li-6">
-                    <a class="main-productos__section--ul--li--a" href="../404/404.html">
+                <li class="main-productos__section--ul--li last-product-li wow animate__animated animate__fadeInUp li-6" >
+                    <a class="main-productos__section--ul--li--a" href="../404/404.html" id="sextoProducto">
                         <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t1-aguja-8x916.webp" alt="Producto 6">
                         <div class="main-productos__section--ul--li--a--div">
                             <h2 class="main-productos__section--ul--li--a--div--product-name">T1 Aguja 8x9/16 - Granel</h2>
