--- a/scss/_all-pages.scss
+++ b/scss/_all-pages.scss
@@ -211,10 +211,67 @@
 }
 .nav-2{
     @extend .nav;
+    @include flex (col);
+    @include pad(15px);
+    &__form{
+        @include hei(auto);
+        @include justali(center, center);
+        text-align: center;
+        @include marpad(20px,0px);
+        @include display (flex);
+        @include flex(row);
+        &--input{
+            @include wid(100%);
+            @include marpad(5px, 10px);
+            @include texts (10vw, 700, rgb(235, 235, 235));
+            @include display(flex);
+            outline: none;
+            border: none;
+            border-radius: 5px;
+            background-color: transparent;
+            &::placeholder{
+                color: map-get($map: $colors, $key: g-tres);
+            }
+        }
+        &--lupa{
+            @include pad(2px 0 0 0);
+            color: map-get($map: $colors, $key: g-tres);
+            &--svg{
+                @include widhei (7vw, 7vw);
+            }
+        }
+    }
+    &__h3{
+        @include wid(100%);
+        @include marpad(30px, 0 0 0 15px);
+        @include texts (6vw, 500, rgb(120, 120, 120));
+        text-align: start;
+    }
     &__ul{
         @extend .nav__ul;
+        @include pad(0px);
+        text-align: start;
         &--li{
             @extend .nav__ul--li;
+            
+            @include marpad(0px, 0px);
+            background-color: transparent;
+            border: none;
+            &:hover{
+                background-color: map-get($map: $colors, $key: g-once);
+                transform:scale(1);
+            }
+            &--a{
+                @include display(flex);
+                @include widhei(100%,auto);
+                @include pad(5px);
+                text-decoration: none;
+                background-color: transparent;
+                &--h4{
+                    @include texts (5vw, 600, rgb(215, 215, 215));
+                    @include marpad(0, 0 0 0 10px);
+                }
+            }
         }
     }
 }
