--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ html {
   width: 100%;
   margin: 5px;
   padding: 10px;
-  font-size: 10vw;
+  font-size: 45px;
   font-weight: 700;
   color: rgb(235, 235, 235);
   display: flex;
@@ -311,14 +311,14 @@ html {
   color: rgb(120, 120, 120);
 }
 .nav-2__form--lupa--svg {
-  width: 7vw;
-  height: 7vw;
+  width: 35px;
+  height: 35px;
 }
 .nav-2__h3 {
   width: 100%;
   margin: 30px;
   padding: 0 0 0 15px;
-  font-size: 6vw;
+  font-size: 27px;
   font-weight: 500;
   color: rgb(120, 120, 120);
   text-align: start;
@@ -346,7 +346,7 @@ html {
   background-color: transparent;
 }
 .nav-2__ul--li--a--h4 {
-  font-size: 5vw;
+  font-size: 23px;
   font-weight: 600;
   color: rgb(215, 215, 215);
   margin: 0;
